// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generatePlan — Phase 1 refactor snapshot (frozen randomness) > explicit effort override 1`] = `
{
  "caffeineStrategy": {
    "firstDoseKm": 16.5,
    "firstDosePercent": 55,
    "maxPerDoseMg": 200,
    "rationale": "Start caffeine at ~17km, distribute across final 45% for sustained effect",
    "timing": "distributed",
    "totalCaffeineMg": 231,
  },
  "carbTarget": {
    "gutCapped": false,
    "max": 90,
    "min": 60,
    "rationale": "2–3 h — multi-transportable CHO (glucose:fructose 2:1) above 60 g/h. Hard intensity (pace + elevation) → top of band (90 g/h).",
    "target": 90,
    "tierMaxBeforeGutCap": 90,
  },
  "hydrationTarget": {
    "fluidMlPerHour": 966,
    "hyponatremiaRisk": false,
    "rationale": "Sweat rate ~1.38 L/h (running, hard, 18°C, 40% RH). Replacing 70% → 966 ml/h.",
    "replacementFraction": 0.7,
    "sodiumMgPerHour": 1143,
    "sweatRateLPerHour": 1.38,
    "totalFluidLiters": 2.415,
    "totalSodiumMg": 2858,
    "ultraCapApplied": false,
  },
  "metrics": {
    "carbsPerHour": 89,
    "totalCaffeine": 300,
    "totalCalories": 890,
    "totalCarbs": 222,
    "totalSodium": 420,
  },
  "nutritionPoints": [
    {
      "distanceKm": 7,
      "id": "id-0",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 110,
        "carbs": 30,
        "category": "gel",
        "color": "orange",
        "id": "gel-30",
        "image": "",
        "name": "Race Gel",
        "priceZAR": 30,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 7.1,
      "id": "id-1",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 75,
        "calories": 100,
        "carbs": 25,
        "category": "gel",
        "color": "red",
        "id": "gel-35-caf",
        "image": "",
        "name": "Rocket Caf",
        "priceZAR": 35,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 12.6,
      "id": "id-2",
      "product": {
        "brand": "AcmeBars",
        "caffeine": 0,
        "calories": 180,
        "carbs": 40,
        "category": "bar",
        "color": "yellow",
        "id": "bar-40",
        "image": "",
        "name": "Race Bar",
        "priceZAR": 50,
        "sodium": 80,
      },
    },
    {
      "distanceKm": 12.7,
      "id": "id-3",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 90,
        "carbs": 22,
        "category": "gel",
        "color": "orange",
        "id": "gel-22",
        "image": "",
        "name": "Lite Gel",
        "priceZAR": 25,
        "sodium": 40,
      },
    },
    {
      "distanceKm": 17.4,
      "id": "id-4",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 75,
        "calories": 100,
        "carbs": 25,
        "category": "gel",
        "color": "red",
        "id": "gel-35-caf",
        "image": "",
        "name": "Rocket Caf",
        "priceZAR": 35,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 22.2,
      "id": "id-5",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 75,
        "calories": 100,
        "carbs": 25,
        "category": "gel",
        "color": "red",
        "id": "gel-35-caf",
        "image": "",
        "name": "Rocket Caf",
        "priceZAR": 35,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 26.2,
      "id": "id-6",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 75,
        "calories": 100,
        "carbs": 25,
        "category": "gel",
        "color": "red",
        "id": "gel-35-caf",
        "image": "",
        "name": "Rocket Caf",
        "priceZAR": 35,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 26.3,
      "id": "id-7",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 110,
        "carbs": 30,
        "category": "gel",
        "color": "orange",
        "id": "gel-30",
        "image": "",
        "name": "Race Gel",
        "priceZAR": 30,
        "sodium": 50,
      },
    },
  ],
}
`;

exports[`generatePlan — Phase 1 refactor snapshot (frozen randomness) > half-marathon, rolling 1`] = `
{
  "caffeineStrategy": {
    "firstDoseKm": 8.6,
    "firstDosePercent": 40,
    "maxPerDoseMg": 200,
    "rationale": "Single caffeine dose at ~9km for peak effect in final third",
    "timing": "late-only",
    "totalCaffeineMg": 231,
  },
  "carbTarget": {
    "gutCapped": false,
    "max": 90,
    "min": 60,
    "rationale": "2–3 h — multi-transportable CHO (glucose:fructose 2:1) above 60 g/h. Moderate intensity → middle of band.",
    "target": 75,
    "tierMaxBeforeGutCap": 90,
  },
  "hydrationTarget": {
    "fluidMlPerHour": 840,
    "hyponatremiaRisk": false,
    "rationale": "Sweat rate ~1.2 L/h (running, moderate, 22°C, 50% RH). Replacing 70% → 840 ml/h.",
    "replacementFraction": 0.7,
    "sodiumMgPerHour": 795,
    "sweatRateLPerHour": 1.2,
    "totalFluidLiters": 1.946,
    "totalSodiumMg": 1842,
    "ultraCapApplied": false,
  },
  "metrics": {
    "carbsPerHour": 86,
    "totalCaffeine": 75,
    "totalCalories": 790,
    "totalCarbs": 199,
    "totalSodium": 360,
  },
  "nutritionPoints": [
    {
      "distanceKm": 5.4,
      "id": "id-0",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 110,
        "carbs": 30,
        "category": "gel",
        "color": "orange",
        "id": "gel-30",
        "image": "",
        "name": "Race Gel",
        "priceZAR": 30,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 8.9,
      "id": "id-1",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 75,
        "calories": 100,
        "carbs": 25,
        "category": "gel",
        "color": "red",
        "id": "gel-35-caf",
        "image": "",
        "name": "Rocket Caf",
        "priceZAR": 35,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 8.9,
      "id": "id-2",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 90,
        "carbs": 22,
        "category": "gel",
        "color": "orange",
        "id": "gel-22",
        "image": "",
        "name": "Lite Gel",
        "priceZAR": 25,
        "sodium": 40,
      },
    },
    {
      "distanceKm": 12.6,
      "id": "id-3",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 110,
        "carbs": 30,
        "category": "gel",
        "color": "orange",
        "id": "gel-30",
        "image": "",
        "name": "Race Gel",
        "priceZAR": 30,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 12.6,
      "id": "id-4",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 90,
        "carbs": 22,
        "category": "gel",
        "color": "orange",
        "id": "gel-22",
        "image": "",
        "name": "Lite Gel",
        "priceZAR": 25,
        "sodium": 40,
      },
    },
    {
      "distanceKm": 16.3,
      "id": "id-5",
      "product": {
        "brand": "AcmeBars",
        "caffeine": 0,
        "calories": 180,
        "carbs": 40,
        "category": "bar",
        "color": "yellow",
        "id": "bar-40",
        "image": "",
        "name": "Race Bar",
        "priceZAR": 50,
        "sodium": 80,
      },
    },
    {
      "distanceKm": 19.4,
      "id": "id-6",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 110,
        "carbs": 30,
        "category": "gel",
        "color": "orange",
        "id": "gel-30",
        "image": "",
        "name": "Race Gel",
        "priceZAR": 30,
        "sodium": 50,
      },
    },
  ],
}
`;

exports[`generatePlan — Phase 1 refactor snapshot (frozen randomness) > long, hilly, hot 1`] = `
{
  "caffeineStrategy": {
    "firstDoseKm": 33,
    "firstDosePercent": 55,
    "maxPerDoseMg": 200,
    "rationale": "Start caffeine at ~33km, distribute across final 45% for sustained effect",
    "timing": "distributed",
    "totalCaffeineMg": 308,
  },
  "carbTarget": {
    "gutCapped": true,
    "max": 90,
    "min": 90,
    "rationale": ">3 h hard — elite multi-transportable 90–120 g/h. Requires gut training. Hard intensity (pace + elevation) → top of band (120 g/h). Capped at gut ceiling of 90 g/h (trained tolerance) — raise via gradual gut training.",
    "target": 90,
    "tierMaxBeforeGutCap": 120,
  },
  "hydrationTarget": {
    "fluidMlPerHour": 800,
    "hyponatremiaRisk": false,
    "rationale": "Sweat rate ~2.07 L/h (running, hard, 30°C, 65% RH). Replacing 90% → 800 ml/h. Capped at 800 ml/h for event > 4 h (hyponatremia guardrail).",
    "replacementFraction": 0.9,
    "sodiumMgPerHour": 2000,
    "sweatRateLPerHour": 2.07,
    "totalFluidLiters": 4.8,
    "totalSodiumMg": 12000,
    "ultraCapApplied": true,
  },
  "metrics": {
    "carbsPerHour": 84,
    "totalCaffeine": 375,
    "totalCalories": 2040,
    "totalCarbs": 501,
    "totalSodium": 940,
  },
  "nutritionPoints": [
    {
      "distanceKm": 4.7,
      "id": "id-0",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 110,
        "carbs": 30,
        "category": "gel",
        "color": "orange",
        "id": "gel-30",
        "image": "",
        "name": "Race Gel",
        "priceZAR": 30,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 4.7,
      "id": "id-1",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 90,
        "carbs": 22,
        "category": "gel",
        "color": "orange",
        "id": "gel-22",
        "image": "",
        "name": "Lite Gel",
        "priceZAR": 25,
        "sodium": 40,
      },
    },
    {
      "distanceKm": 9.3,
      "id": "id-2",
      "product": {
        "brand": "AcmeBars",
        "caffeine": 0,
        "calories": 180,
        "carbs": 40,
        "category": "bar",
        "color": "yellow",
        "id": "bar-40",
        "image": "",
        "name": "Race Bar",
        "priceZAR": 50,
        "sodium": 80,
      },
    },
    {
      "distanceKm": 14,
      "id": "id-3",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 110,
        "carbs": 30,
        "category": "gel",
        "color": "orange",
        "id": "gel-30",
        "image": "",
        "name": "Race Gel",
        "priceZAR": 30,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 14.1,
      "id": "id-4",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 90,
        "carbs": 22,
        "category": "gel",
        "color": "orange",
        "id": "gel-22",
        "image": "",
        "name": "Lite Gel",
        "priceZAR": 25,
        "sodium": 40,
      },
    },
    {
      "distanceKm": 18.7,
      "id": "id-5",
      "product": {
        "brand": "AcmeBars",
        "caffeine": 0,
        "calories": 180,
        "carbs": 40,
        "category": "bar",
        "color": "yellow",
        "id": "bar-40",
        "image": "",
        "name": "Race Bar",
        "priceZAR": 50,
        "sodium": 80,
      },
    },
    {
      "distanceKm": 23.3,
      "id": "id-6",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 110,
        "carbs": 30,
        "category": "gel",
        "color": "orange",
        "id": "gel-30",
        "image": "",
        "name": "Race Gel",
        "priceZAR": 30,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 27.3,
      "id": "id-7",
      "product": {
        "brand": "AcmeBars",
        "caffeine": 0,
        "calories": 180,
        "carbs": 40,
        "category": "bar",
        "color": "yellow",
        "id": "bar-40",
        "image": "",
        "name": "Race Bar",
        "priceZAR": 50,
        "sodium": 80,
      },
    },
    {
      "distanceKm": 31.3,
      "id": "id-8",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 110,
        "carbs": 30,
        "category": "gel",
        "color": "orange",
        "id": "gel-30",
        "image": "",
        "name": "Race Gel",
        "priceZAR": 30,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 35.3,
      "id": "id-9",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 75,
        "calories": 100,
        "carbs": 25,
        "category": "gel",
        "color": "red",
        "id": "gel-35-caf",
        "image": "",
        "name": "Rocket Caf",
        "priceZAR": 35,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 39.3,
      "id": "id-10",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 75,
        "calories": 100,
        "carbs": 25,
        "category": "gel",
        "color": "red",
        "id": "gel-35-caf",
        "image": "",
        "name": "Rocket Caf",
        "priceZAR": 35,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 43.3,
      "id": "id-11",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 75,
        "calories": 100,
        "carbs": 25,
        "category": "gel",
        "color": "red",
        "id": "gel-35-caf",
        "image": "",
        "name": "Rocket Caf",
        "priceZAR": 35,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 46.7,
      "id": "id-12",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 75,
        "calories": 100,
        "carbs": 25,
        "category": "gel",
        "color": "red",
        "id": "gel-35-caf",
        "image": "",
        "name": "Rocket Caf",
        "priceZAR": 35,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 50,
      "id": "id-13",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 75,
        "calories": 100,
        "carbs": 25,
        "category": "gel",
        "color": "red",
        "id": "gel-35-caf",
        "image": "",
        "name": "Rocket Caf",
        "priceZAR": 35,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 53.3,
      "id": "id-14",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 110,
        "carbs": 30,
        "category": "gel",
        "color": "orange",
        "id": "gel-30",
        "image": "",
        "name": "Race Gel",
        "priceZAR": 30,
        "sodium": 50,
      },
    },
    {
      "distanceKm": 56.7,
      "id": "id-15",
      "product": {
        "brand": "AcmeBars",
        "caffeine": 0,
        "calories": 180,
        "carbs": 40,
        "category": "bar",
        "color": "yellow",
        "id": "bar-40",
        "image": "",
        "name": "Race Bar",
        "priceZAR": 50,
        "sodium": 80,
      },
    },
    {
      "distanceKm": 56.7,
      "id": "id-16",
      "product": {
        "brand": "AcmeGels",
        "caffeine": 0,
        "calories": 90,
        "carbs": 22,
        "category": "gel",
        "color": "orange",
        "id": "gel-22",
        "image": "",
        "name": "Lite Gel",
        "priceZAR": 25,
        "sodium": 40,
      },
    },
  ],
}
`;
